; ModuleID = '/home/carl/AnghaBench/git/extr_exec-cmd.c_prepare_git_cmd.c'
source_filename = "/home/carl/AnghaBench/git/extr_exec-cmd.c_prepare_git_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv_array = type { i8** }

@.str = private unnamed_addr constant [4 x i8] c"git\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @prepare_git_cmd(%struct.argv_array* %0, i8** %1) #0 {
  %3 = alloca %struct.argv_array*, align 8
  %4 = alloca i8**, align 8
  store %struct.argv_array* %0, %struct.argv_array** %3, align 8
  store i8** %1, i8*** %4, align 8
  %5 = load %struct.argv_array*, %struct.argv_array** %3, align 8
  %6 = call i32 @argv_array_push(%struct.argv_array* %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.argv_array*, %struct.argv_array** %3, align 8
  %8 = load i8**, i8*** %4, align 8
  %9 = call i32 @argv_array_pushv(%struct.argv_array* %7, i8** %8)
  %10 = load %struct.argv_array*, %struct.argv_array** %3, align 8
  %11 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %10, i32 0, i32 0
  %12 = load i8**, i8*** %11, align 8
  ret i8** %12
}

declare dso_local i32 @argv_array_push(%struct.argv_array*, i8*) #1

declare dso_local i32 @argv_array_pushv(%struct.argv_array*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
